--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,13 @@
-p, {
-    float: left;
-}
+.map-container-5{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+    }
+    .map-container-5 iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+    }
