--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,3 +35,175 @@ body {
     .nameForm{
       display: none;
     }
+
+
+
+
+/* _____________________________________________________ tracking_page.html _______________________________________________________________ */
+/* Desktop */
+
+@media (max-width: 2560px){
+  body {
+    background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+    background-repeat: no-repeat;
+    background-position: cover;
+    background-size: 200%;
+    color: black;
+    font-size: 20px;
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+}
+
+
+.gameTracker{
+  margin-top: 175px;
+  margin-left: 280px;
+  padding-top: 0px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  padding-right: 0px;
+  padding-left: 0px;
+  position: center;
+}
+}
+
+@media (min-width: 1280px) and (max-width: 1440px) {
+
+  body {
+      background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+      background-repeat: no-repeat;
+      background-position: cover;
+      background-size: 200%;
+      color: black;
+      font-size: 20px;
+      font-family: 'Raleway', sans-serif;
+      text-align: center;
+  }
+
+
+  .gameTracker{
+    margin-top: 160px;
+    margin-left: 250px;
+    padding-top: 0px;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    padding-right: 0px;
+    padding-left: 0px;
+    position: center;
+  }
+}
+
+
+
+
+/* Tablets */
+@media (min-width: 768px) and (max-width: 991px) {
+
+  body {
+      background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+      background-repeat: no-repeat;
+      background-position: cover;
+      background-size: 200%;
+      color: black;
+      font-size: 20px;
+      font-family: 'Raleway', sans-serif;
+      text-align: center;
+  }
+
+
+  .gameTracker{
+    margin-top: 200px;
+    margin-left: 190px;
+    padding-top: 0px;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    padding-right: 0px;
+    padding-left: 0px;
+    position: center;
+  }
+}
+
+ @media(min-width: 700px) and (max-width: 768px) {
+
+
+  body {
+    background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+    background-repeat: no-repeat;
+    background-position: cover;
+    background-size: 220%;
+    color: black;
+    font-size: 20px;
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+}
+
+
+.gameTracker{
+  margin-top: 143px;
+  margin-left: 185px;
+  padding-top: 0px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  padding-right: 0px;
+  padding-left: 0px;
+  position: center;
+}
+
+}
+
+@media (min-width: 600px) and (max-width: 690px) {
+
+  body {
+    background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+    background-repeat: no-repeat;
+    background-position: cover;
+    background-size: 200%;
+    color: black;
+    font-size: 20px;
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+}
+
+
+.gameTracker{
+  margin-top: 65px;
+  margin-left: 139px;
+  padding-top: 0px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  padding-right: 0px;
+  padding-left: 0px;
+  position: center;
+}
+}
+
+/* Phones */
+@media(min-width: 300px) and (max-width: 450px) {
+  body {
+    background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+    background-repeat: no-repeat;
+    background-position: cover;
+    background-size: 250%;
+    color: black;
+    font-size: 15px;
+    font-family: 'Raleway', sans-serif;
+}
+
+.gameTracker{
+  margin-top: 35px;
+  margin-left: 75px;
+  padding-top: 0px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  padding-right: 0px;
+  padding-left: 0px;
+}
+
+.display-4{
+  font-size: 1.5rem;
+}
+
+.trackerTable{
+  font-size: 1.0rem;
+}
+}
