--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,8 +57,8 @@ body {
 
 
 .gameTracker{
-  margin-top: 175px;
-  margin-left: 280px;
+  margin-top: 600px;
+  margin-left: 450px;
   padding-top: 0px;
   margin-bottom: 0px;
   padding-bottom: 0px;
@@ -66,10 +66,48 @@ body {
   padding-left: 0px;
   position: center;
 }
+
+
+.trackerTable{
+  margin-left: 510px;
+  }
+
+
 }
 
 
-@media (min-width: 1600px) and (max-width: 1699px) {
+@media (min-width: 2000px) and (max-width: 2559px) {
+  body {
+    background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+    background-repeat: no-repeat;
+    background-position: cover;
+    background-size: 200%;
+    color: black;
+    font-size: 20px;
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+}
+
+
+.gameTracker{
+  margin-top: 500px;
+  margin-left: 400px;
+  padding-top: 0px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  padding-right: 0px;
+  padding-left: 0px;
+  position: center;
+  text-align: center;
+}
+
+.trackerTable{
+  margin-left: 390px;
+  }
+
+}
+
+@media (min-width: 1780px) and (max-width: 1999px) {
   body {
     background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
     background-repeat: no-repeat;
@@ -91,11 +129,50 @@ body {
   padding-right: 0px;
   padding-left: 0px;
   position: center;
+  text-align: center;
 }
+
+.trackerTable{
+  margin-left: 320px;
+  }
+
 }
 
 
-@media (min-width: 1280px) and (max-width: 1440px) {
+
+@media (min-width: 1600px) and (max-width: 1779px) {
+  body {
+    background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+    background-repeat: no-repeat;
+    background-position: cover;
+    background-size: 200%;
+    color: black;
+    font-size: 20px;
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+}
+
+
+.gameTracker{
+  margin-top: 240px;
+  margin-left: 333px;
+  padding-top: 0px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  padding-right: 0px;
+  padding-left: 0px;
+  position: center;
+  text-align: center;
+}
+
+.trackerTable{
+  margin-left: 276px;
+  }
+
+}
+
+
+@media (min-width: 1280px) and (max-width: 1599px) {
 
   body {
       background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
@@ -119,13 +196,14 @@ body {
     padding-left: 0px;
     position: center;
   }
+
+  .trackerTable{
+  margin-left: 276px;
+  }
 }
 
-
-
-
 /* Tablets */
-@media (min-width: 768px) and (max-width: 991px) {
+@media (min-width: 768px) and (max-width: 1024px) {
 
   body {
       background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
@@ -179,7 +257,8 @@ body {
 
 }
 
-@media (min-width: 600px) and (max-width: 690px) {
+
+@media (max-width: 607px) {
 
   body {
     background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
@@ -205,9 +284,36 @@ body {
 }
 }
 
+@media (min-width: 600px) and (max-width: 699px) {
+
+  body {
+    background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+    background-repeat: no-repeat;
+    background-position: cover;
+    background-size: 240%;
+    color: black;
+    font-size: 20px;
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+}
 
 
-@media (min-width: 500px) and (max-width: 590px) {
+.gameTracker{
+  margin-top: 124px;
+  margin-left: 139px;
+  padding-top: 0px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  padding-right: 0px;
+  padding-left: 0px;
+  position: center;
+}
+}
+
+
+
+
+@media (min-width: 500px) and (max-width: 599px) {
 
   body {
     background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
@@ -232,6 +338,34 @@ body {
   position: center;
 }
 }
+
+@media (min-width: 450px) and (max-width: 499px) {
+
+  body {
+    background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+    background-repeat: no-repeat;
+    background-position: cover;
+    background-size: 270%;
+    color: black;
+    font-size: 20px;
+    font-family: 'Raleway', sans-serif;
+    text-align: center;
+}
+
+
+.gameTracker{
+  margin-top: 114px;
+  margin-left: 110px;
+  padding-top: 0px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  padding-right: 0px;
+  padding-left: 0px;
+  position: center;
+}
+}
+
+
 
 /* Phones */
 @media(min-width: 300px) and (max-width: 450px) {
@@ -261,4 +395,50 @@ body {
 .trackerTable{
   font-size: 1.0rem;
 }
+}
+
+
+@media(min-width: 100px) and (max-width: 299px) {
+  body {
+    color: black;
+    font-size: 15px;
+    font-family: 'Raleway', sans-serif;
+    background: 0;
+}
+
+.gameTracker{
+  margin-top: 0px;
+  margin-left: 0px;
+  padding-top: 0px;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  padding-right: 0px;
+  padding-left: 0px;
+  width: 500px;
+  height: 500vh;
+}
+
+.lead{
+  margin-right: 85px;
+}
+
+.display-4{
+  font-size: 8px;
+
+}
+
+.trackerTable{
+  font-size: 8px;
+  margin-top: 0px;
+  margin-left: 140px;
+  margin-right: 0px;
+  padding-top: 0px;
+  margin-bottom: 0px;
+
+}
+
+.goDashboard{
+  margin-right: 70px;
+}
+
 }
