--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -445,15 +445,11 @@ body {
 
 
 
+
 /* ___________________________________________________@media game_mode.html _______________________________________________________________ */
 
+/* 100-299px */
 @media(min-width: 100px) and (max-width: 299px){
-  body {
-      color: black;
-      font-size: 15px;
-      font-family: 'Raleway', sans-serif;
-      background: 0;
-  }
 
   .gameMode{
     margin-top: 0px;
@@ -463,7 +459,7 @@ body {
     padding-bottom: 0px;
     padding-right: 0px;
     padding-left: 0px;
-    width: 40vh;
+    width: 66vh;
     height: 230vh;
   }
 
@@ -476,14 +472,9 @@ body {
   }
 }
 
-
+/* 300-450px */
 @media(min-width: 300px) and (max-width: 450px){
-  body {
-      color: black;
-      font-size: 15px;
-      font-family: 'Raleway', sans-serif;
-      background: 0;
-  }
+
 
   .gameMode{
     margin-top: 0px;
@@ -493,19 +484,13 @@ body {
     padding-bottom: 0px;
     padding-right: 0px;
     padding-left: 0px;
-    width: 246px;
-    height: 550px;
+    width: 414px;
+    height: 770px;
   }
 }
 
-
+/* 450-499px */
 @media(min-width: 450px) and (max-width: 499px){
-  body {
-      color: black;
-      font-size: 15px;
-      font-family: 'Raleway', sans-serif;
-      background: 0;
-  }
 
   .gameMode{
     margin-top: 0px;
@@ -515,8 +500,40 @@ body {
     padding-bottom: 0px;
     padding-right: 0px;
     padding-left: 0px;
-    width: 246px;
-    height: 550px;
+    width: 500px;
+    height: 670px;
   }
 
+}
+
+/* 500-599px */
+@media (min-width: 500px) and (max-width: 599px) {
+
+  .gameMode{
+    margin-top: 0px;
+    margin-left: 0px;
+    padding-top: 0px;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    padding-right: 0px;
+    padding-left: 0px;
+    width: 600px;
+    height: 685px;
+  }
+}
+
+/* 600-699px */
+@media (min-width: 600px) and (max-width: 699px) {
+
+  .gameMode{
+    margin-top: 0px;
+    margin-left: 0px;
+    padding-top: 0px;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
+    padding-right: 0px;
+    padding-left: 0px;
+    width: 600px;
+    height: 685px;
+  }
 }
