print css ids and print page moved out of javascript folder.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,14 @@ body {
     color: black;
     margin-left: 300px;
   }
+   /* jumbotron from dashboard.html */
+   .dashboard {
+    background-color: grey;
+    margin-top: 50px;
+    width: 55%;
+    color: black;
+    margin-left: 300px;
+  }
 
 
   .map-container-5{
