working on new navbar and css.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,14 +17,21 @@ body {
     margin-left: 300px;
   }
    /* jumbotron from dashboard.html */
-   .dashboard {
+   .Dashboard {
     background-color: grey;
     margin-top: 50px;
     width: 55%;
     color: black;
     margin-left: 300px;
   }
-
+     /* jumbotron from clue_page.html */
+     .clue_page {
+      background-color: grey;
+      margin-top: 50px;
+      width: 55%;
+      color: black;
+      margin-left: 300px;
+    }
 
   .map-container-5{
     overflow:hidden;
