--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,14 +10,20 @@ body {
 
   /* jumbotron from game_mode.html */
   .gameMode {
+    /* Note these dimensions are based off a screen with a width of 1552px */
     background-color: grey;
-    margin-top: 50px;
-    width: 55%;
     color: black;
-    margin-left: 300px;
+    /* These positions and dimensions of the w x h for the jumbotron work well for 1552px and up */
+    /* Minor-off positioning begins to start at 1800px */
+    padding-top: 34px;
+    margin-top: 55px;
+    margin-left: 400px;
+    width: 95vh;
+    height: 80vh;
   }
+
    /* jumbotron from dashboard.html */
-   .Dashboard {
+  .Dashboard {
     background-color: grey;
     margin-top: 50px;
     width: 55%;
@@ -25,7 +31,7 @@ body {
     margin-left: 300px;
   }
      /* jumbotron from clue_page.html */
-     .clue_page {
+    .clue_page {
       background-color: grey;
       margin-top: 50px;
       width: 55%;
@@ -47,8 +53,7 @@ body {
     position:absolute;
     }
 
-
-    .nameForm{
+.nameForm{
       display: none;
     }
     /* Add a black background color to the top navigation */
@@ -79,13 +84,11 @@ body {
   color: white;
 }
 
-
-
+/* @media dimension groups: min-width: 300px, 768, 992, 1200 */
 
 /* _______________________@media index.html _________________________ */
 
-
-@media(min-width: 300px) and (max-width: 767px) {
+@media(min-width: 300px) and (max-width: 768px) {
 
   /* <jumbotron> */
   .gameMode {
@@ -148,132 +151,24 @@ body {
 
 
 /* __________________________________________________________________________________________________ */
-@media(min-width: 768px) {
-
-  /* <jumbotron> */
-  .gameMode {
-    margin-top: 14px;
-    margin-left: 112px;
-    padding-top: 0px;
-    margin-bottom: 0px;
-    padding-bottom: 0px;
-    padding-right: 0px;
-    padding-left: 0px;
-    width: 100vh;
-    /* Assuming the smallest screen height is 768px */
-    height: 85vh;
-  }
-
-  /* Navigation bar */
-  .topnav {
-    background-color: gray;
-    overflow: hidden;
-    width: 130vh;
-  }
-
-  /* Game Mode Title */
-  .gameModeDisplay {
-    margin-left: 260px;
-  }
-  /* <p> Instructions */
-  .lead {
-    margin-left: 110px;
-  }
-  /* <h3 Game Code> */
-  #gameCodeHeader {
-    margin-left: 301px;
-  }
-  /* <form code> */
-  #codeForm {
-    margin-left: 260px;
-  }
-  /* <submit button> */
-  .submitButton {
-    margin-left: 334px;
-  }
-  /* <h3 New Game> */
-  #newGameHeader {
-    margin-left: 188px;
-  }
-  /* <new game button> */
-  .newGame {
-    margin-left: 320px;
-  }
-  /* <h3 Login> */
-  #loginHeader {
-    margin-left: 337px;
-  }
-  /* <login button> */
-  .login {
-    margin-left: 339px;
-  }
+@media(min-width: 768) {
+ /* <jumbotron> */
+.gameMode {
+  /* Assuming the smallest screen height is 768px */
+  height: 140vh;
 };
-
-/* __________________________________________________________________________________________________ */
-/* Fix this. Not responding in Chrome Dev Tools */
-@media(min-width:992px) {
-
-  /* <jumbotron> */
-  .gameMode {
-    margin-top: 14px;
-    margin-left: 112px;
-    padding-top: 0px;
-    margin-bottom: 0px;
-    padding-bottom: 0px;
-    padding-right: 0px;
-    padding-left: 0px;
-    width: 100vh;
-    /* Assuming the smallest screen height is 768px */
-    height: 85vh;
-  }
-
-  /* Navigation bar */
-  .topnav {
-    background-color: gray;
-    overflow: hidden;
-    width: 100vh;
-
-  }
-
-  /* Game Mode Title */
-  .gameModeDisplay {
-    margin-left: 260px;
-  }
-  /* <p> Instructions */
-  .lead {
-    margin-left: 110px;
-  }
-  /* <h3 Game Code> */
-  #gameCodeHeader {
-    margin-left: 301px;
-  }
-  /* <form code> */
-  #codeForm {
-    margin-left: 260px;
-  }
-  /* <submit button> */
-  .submitButton {
-    margin-left: 334px;
-  }
-  /* <h3 New Game> */
-  #newGameHeader {
-    margin-left: 188px;
-  }
-  /* <new game button> */
-  .newGame {
-    margin-left: 320px;
-  }
-  /* <h3 Login> */
-  #loginHeader {
-    margin-left: 337px;
-  }
-  /* <login button> */
-  .login {
-    margin-left: 339px;
-  }
 };
 
 /* __________________________________________________________________________________________________ */
 
-@media(min-width: 1200px) {
-};
+
+/* @media(min-width:992px) { */
+/* }; */
+/* __________________________________________________________________________________________________ */
+
+/* @media(min-width: 1200px) { */
+/* }; */
+
+
+
+
