--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,7 +151,7 @@ body {
 
 
 /* __________________________________________________________________________________________________ */
-@media(min-width: 769) {
+@media(min-width: 769px) {
  /* <jumbotron> */
 .gameMode {
   margin-top: 0px;
@@ -161,7 +161,7 @@ body {
   padding-bottom: 0px;
   padding-right: 0px;
   padding-left: 0px;
-  width: 100vh;
+  width: 100vh !important;
   /* Assuming the smallest screen height is 768px */
   height: 250vh;
 }
