--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,7 +86,7 @@ body {
   color: white;
 }
 
-/* @media dimension groups: min-width: 576px, 768, 992, 1200 */
+/* @media dimension groups: min-width: 576px */
 
 /* _______________________@media index.html _________________________ */
 
