--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 body {
     background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
     background-repeat: no-repeat;
-    background-position: cover;
+    background-size: cover;
     background-size: 100%;
     color: black;
     font-size: 20px;
@@ -14,7 +14,8 @@ body {
     margin-top: 50px;
     width: 55%;
     color: black;
-    margin-left: 300px;
+    margin-left: auto;
+    margin-right: auto; 
   }
    /* jumbotron from dashboard.html */
    .Dashboard {
@@ -22,32 +23,25 @@ body {
     margin-top: 50px;
     width: 55%;
     color: black;
-    margin-left: 300px;
+    margin-left: auto;
+    margin-right: auto; 
   }
      /* jumbotron from clue_page.html */
-     .clue_page {
+     .jumbotron {
       background-color: grey;
       margin-top: 50px;
       width: 55%;
       color: black;
-      margin-left: 300px;
+      margin-left: auto;
+      margin-right: auto; 
+    }
+    h1{
+      text-align: center
     }
 
-  .map-container-5{
-    overflow:hidden;
-    padding-bottom:56.25%;
-    position:relative;
-    height:0;
+    .btn btn-primary btn-lg{
+      float : right;
     }
-    .map-container-5 iframe{
-    left:0;
-    top:0;
-    height:100%;
-    width:100%;
-    position:absolute;
-    }
-
-
     .nameForm{
       display: none;
     }
@@ -55,6 +49,8 @@ body {
 .topnav {
   background-color: gray;
   overflow: hidden;
+  width: 100%;
+
 }
 
 /* Style the links inside the navigation bar */
@@ -84,497 +80,3 @@ body {
 
 /* _________________________________________________@media tracking_page.html _______________________________________________________________ */
 
-
-
-@media (max-width: 2560px){
-  body {
-    background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
-    background-repeat: no-repeat;
-    background-position: cover;
-    background-size: 200%;
-    color: black;
-    font-size: 20px;
-    font-family: 'Raleway', sans-serif;
-    text-align: center;
-}
-
-
-.gameTracker{
-  margin-top: 600px;
-  margin-left: 450px;
-  padding-top: 0px;
-  margin-bottom: 0px;
-  padding-bottom: 0px;
-  padding-right: 0px;
-  padding-left: 0px;
-  position: center;
-}
-
-
-.trackerTable{
-  margin-left: 510px;
-  }
-
-
-}
-
-
-@media (min-width: 2000px) and (max-width: 2559px) {
-  body {
-    background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
-    background-repeat: no-repeat;
-    background-position: cover;
-    background-size: 200%;
-    color: black;
-    font-size: 20px;
-    font-family: 'Raleway', sans-serif;
-    text-align: center;
-}
-
-
-.gameTracker{
-  margin-top: 500px;
-  margin-left: 400px;
-  padding-top: 0px;
-  margin-bottom: 0px;
-  padding-bottom: 0px;
-  padding-right: 0px;
-  padding-left: 0px;
-  position: center;
-  text-align: center;
-}
-
-.trackerTable{
-  margin-left: 390px;
-  }
-
-}
-
-@media (min-width: 1780px) and (max-width: 1999px) {
-  body {
-    background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
-    background-repeat: no-repeat;
-    background-position: cover;
-    background-size: 200%;
-    color: black;
-    font-size: 20px;
-    font-family: 'Raleway', sans-serif;
-    text-align: center;
-}
-
-
-.gameTracker{
-  margin-top: 240px;
-  margin-left: 333px;
-  padding-top: 0px;
-  margin-bottom: 0px;
-  padding-bottom: 0px;
-  padding-right: 0px;
-  padding-left: 0px;
-  position: center;
-  text-align: center;
-}
-
-.trackerTable{
-  margin-left: 320px;
-  }
-
-}
-
-
-
-@media (min-width: 1600px) and (max-width: 1779px) {
-  body {
-    background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
-    background-repeat: no-repeat;
-    background-position: cover;
-    background-size: 200%;
-    color: black;
-    font-size: 20px;
-    font-family: 'Raleway', sans-serif;
-    text-align: center;
-}
-
-
-.gameTracker{
-  margin-top: 240px;
-  margin-left: 333px;
-  padding-top: 0px;
-  margin-bottom: 0px;
-  padding-bottom: 0px;
-  padding-right: 0px;
-  padding-left: 0px;
-  position: center;
-  text-align: center;
-}
-
-.trackerTable{
-  margin-left: 276px;
-  }
-
-}
-
-
-@media (min-width: 1280px) and (max-width: 1599px) {
-
-  body {
-      background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
-      background-repeat: no-repeat;
-      background-position: cover;
-      background-size: 200%;
-      color: black;
-      font-size: 20px;
-      font-family: 'Raleway', sans-serif;
-      text-align: center;
-  }
-
-
-  .gameTracker{
-    margin-top: 160px;
-    margin-left: 250px;
-    padding-top: 0px;
-    margin-bottom: 0px;
-    padding-bottom: 0px;
-    padding-right: 0px;
-    padding-left: 0px;
-    position: center;
-  }
-
-  .trackerTable{
-  margin-left: 276px;
-  }
-}
-
-
-@media (min-width: 768px) and (max-width: 1024px) {
-
-  body {
-      background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
-      background-repeat: no-repeat;
-      background-position: cover;
-      background-size: 200%;
-      color: black;
-      font-size: 20px;
-      font-family: 'Raleway', sans-serif;
-      text-align: center;
-  }
-
-
-  .gameTracker{
-    margin-top: 200px;
-    margin-left: 190px;
-    padding-top: 0px;
-    margin-bottom: 0px;
-    padding-bottom: 0px;
-    padding-right: 0px;
-    padding-left: 0px;
-    position: center;
-  }
-}
-
-@media(min-width: 700px) and (max-width: 768px) {
-
-
-  body {
-    background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
-    background-repeat: no-repeat;
-    background-position: cover;
-    background-size: 220%;
-    color: black;
-    font-size: 20px;
-    font-family: 'Raleway', sans-serif;
-    text-align: center;
-}
-
-
-.gameTracker{
-  margin-top: 143px;
-  margin-left: 185px;
-  padding-top: 0px;
-  margin-bottom: 0px;
-  padding-bottom: 0px;
-  padding-right: 0px;
-  padding-left: 0px;
-  position: center;
-}
-
-}
-
-
-@media (max-width: 607px) {
-
-  body {
-    background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
-    background-repeat: no-repeat;
-    background-position: cover;
-    background-size: 240%;
-    color: black;
-    font-size: 20px;
-    font-family: 'Raleway', sans-serif;
-    text-align: center;
-}
-
-
-.gameTracker{
-  margin-top: 65px;
-  margin-left: 139px;
-  padding-top: 0px;
-  margin-bottom: 0px;
-  padding-bottom: 0px;
-  padding-right: 0px;
-  padding-left: 0px;
-  position: center;
-}
-}
-
-@media (min-width: 600px) and (max-width: 699px) {
-
-  body {
-    background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
-    background-repeat: no-repeat;
-    background-position: cover;
-    background-size: 240%;
-    color: black;
-    font-size: 20px;
-    font-family: 'Raleway', sans-serif;
-    text-align: center;
-}
-
-
-.gameTracker{
-  margin-top: 124px;
-  margin-left: 139px;
-  padding-top: 0px;
-  margin-bottom: 0px;
-  padding-bottom: 0px;
-  padding-right: 0px;
-  padding-left: 0px;
-  position: center;
-}
-}
-
-
-
-@media (min-width: 500px) and (max-width: 599px) {
-
-  body {
-    background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
-    background-repeat: no-repeat;
-    background-position: cover;
-    background-size: 270%;
-    color: black;
-    font-size: 20px;
-    font-family: 'Raleway', sans-serif;
-    text-align: center;
-}
-
-
-.gameTracker{
-  margin-top: 142px;
-  margin-left: 119px;
-  padding-top: 0px;
-  margin-bottom: 0px;
-  padding-bottom: 0px;
-  padding-right: 0px;
-  padding-left: 0px;
-  position: center;
-}
-}
-
-@media (min-width: 450px) and (max-width: 499px) {
-
-  body {
-    background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
-    background-repeat: no-repeat;
-    background-position: cover;
-    background-size: 270%;
-    color: black;
-    font-size: 20px;
-    font-family: 'Raleway', sans-serif;
-    text-align: center;
-}
-
-
-.gameTracker{
-  margin-top: 114px;
-  margin-left: 110px;
-  padding-top: 0px;
-  margin-bottom: 0px;
-  padding-bottom: 0px;
-  padding-right: 0px;
-  padding-left: 0px;
-  position: center;
-}
-}
-
-
-
-@media(min-width: 300px) and (max-width: 450px) {
-  body {
-    color: black;
-    font-size: 15px;
-    font-family: 'Raleway', sans-serif;
-    background: 0;
-}
-
-.gameTracker{
-  margin-top: 0px;
-  margin-left: 0px;
-  padding-top: 0px;
-  margin-bottom: 0px;
-  padding-bottom: 0px;
-  padding-right: 0px;
-  padding-left: 0px;
-  height: 200vh;
-  width: 63vh;
-}
-
-.display-4{
-  font-size: 2.0rem;
-}
-
-.trackerTable{
-  font-size: 1.0rem;
-}
-}
-
-
-@media(min-width: 100px) and (max-width: 299px) {
-  body {
-    color: black;
-    font-size: 15px;
-    font-family: 'Raleway', sans-serif;
-    background: 0;
-}
-
-.gameTracker{
-  margin-top: 0px;
-  margin-left: 0px;
-  padding-top: 0px;
-  margin-bottom: 0px;
-  padding-bottom: 0px;
-  padding-right: 0px;
-  padding-left: 0px;
-  width: 500px;
-  height: 500vh;
-}
-
-.lead{
-  margin-right: 85px;
-}
-
-.display-4{
-  font-size: 8px;
-
-}
-
-.trackerTable{
-  font-size: 8px;
-  margin-top: 0px;
-  margin-left: 140px;
-  margin-right: 0px;
-  padding-top: 0px;
-  margin-bottom: 0px;
-
-}
-
-.goDashboard{
-  margin-right: 70px;
-}
-
-}
-
-
-
-
-/* ___________________________________________________@media game_mode.html _______________________________________________________________ */
-
-/* 100-299px */
-@media(min-width: 100px) and (max-width: 299px){
-
-  .gameMode{
-    margin-top: 0px;
-    margin-left: 0px;
-    padding-top: 0px;
-    margin-bottom: 0px;
-    padding-bottom: 0px;
-    padding-right: 0px;
-    padding-left: 0px;
-    width: 66vh;
-    height: 230vh;
-  }
-
-  .lead{
-    margin-left: 86px;
-  }
-
-  .gameModeDisplay{
-  font-size: 30px;
-  }
-}
-
-/* 300-450px */
-@media(min-width: 300px) and (max-width: 450px){
-
-
-  .gameMode{
-    margin-top: 0px;
-    margin-left: 0px;
-    padding-top: 0px;
-    margin-bottom: 0px;
-    padding-bottom: 0px;
-    padding-right: 0px;
-    padding-left: 0px;
-    width: 414px;
-    height: 770px;
-  }
-}
-
-/* 450-499px */
-@media(min-width: 450px) and (max-width: 499px){
-
-  .gameMode{
-    margin-top: 0px;
-    margin-left: 0px;
-    padding-top: 0px;
-    margin-bottom: 0px;
-    padding-bottom: 0px;
-    padding-right: 0px;
-    padding-left: 0px;
-    width: 500px;
-    height: 670px;
-  }
-
-}
-
-/* 500-599px */
-@media (min-width: 500px) and (max-width: 599px) {
-
-  .gameMode{
-    margin-top: 0px;
-    margin-left: 0px;
-    padding-top: 0px;
-    margin-bottom: 0px;
-    padding-bottom: 0px;
-    padding-right: 0px;
-    padding-left: 0px;
-    width: 600px;
-    height: 685px;
-  }
-}
-
-/* 600-699px */
-@media (min-width: 600px) and (max-width: 699px) {
-
-  .gameMode{
-    margin-top: 0px;
-    margin-left: 0px;
-    padding-top: 0px;
-    margin-bottom: 0px;
-    padding-bottom: 0px;
-    padding-right: 0px;
-    padding-left: 0px;
-    width: 600px;
-    height: 685px;
-  }
-}
