--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,187 +1,179 @@
 body {
-    background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
-    background-repeat: no-repeat;
-<<<<<<< HEAD
-    background-size: cover;
-    background-size: 100%;
-=======
-    background-position: cover;
->>>>>>> 74a1740b300571159d9bbd01b9fe10066a14dcf4
-    color: black;
-    font-size: 20px;
-    font-family: 'Raleway', sans-serif;
-  }
+  background-image: url("https://images.unsplash.com/photo-1496950866446-3253e1470e8e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-size: 100%;
+  background-position: cover;
+  color: black;
+  font-size: 20px;
+  font-family: 'Raleway', sans-serif;
+}
 
-  /* jumbotron from game_mode.html */
-  .gameMode {
-    /* Note these dimensions are based off a screen with a width of 1552px */
-    background-color: grey;
-    color: black;
-<<<<<<< HEAD
-    margin-left: auto;
-    margin-right: auto; 
-=======
-    /* These positions and dimensions of the w x h for the jumbotron work well for 1552px and up */
-    /* Minor-off positioning begins to start at 1800px */
-    padding-top: auto;
-    margin-top: 85px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: auto;
-    width: 100%;
-    text-align: center;
-    /* height: 80vh; */
->>>>>>> 74a1740b300571159d9bbd01b9fe10066a14dcf4
-  }
+/* jumbotron from game_mode.html */
+.gameMode {
+  /* Note these dimensions are based off a screen with a width of 1552px */
+  background-color: grey;
+  color: black;
+  margin-left: auto;
+  margin-right: auto;
+  /* These positions and dimensions of the w x h for the jumbotron work well for 1552px and up */
+  /* Minor-off positioning begins to start at 1800px */
+  padding-top: auto;
+  margin-top: 85px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: auto;
+  width: 100%;
+  text-align: center;
+  /* height: 80vh; */
+}
 
-   /* jumbotron from dashboard.html */
-  .Dashboard {
+/* jumbotron from dashboard.html */
+.Dashboard {
+  background-color: grey;
+  margin-top: 50px;
+  width: 55%;
+  color: black;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* jumbotron from clue_page.html */
+.jumbotron {
+
     background-color: grey;
     margin-top: 50px;
     width: 55%;
     color: black;
     margin-left: auto;
-    margin-right: auto; 
+    margin-right: auto;
   }
-     /* jumbotron from clue_page.html */
-<<<<<<< HEAD
-     .jumbotron {
-=======
-    .clue_page {
->>>>>>> 74a1740b300571159d9bbd01b9fe10066a14dcf4
-      background-color: grey;
-      margin-top: 50px;
-      width: 55%;
-      color: black;
-      margin-left: auto;
-      margin-right: auto; 
-    }
-    h1{
-      text-align: center
-    }
 
-<<<<<<< HEAD
-    .btn btn-primary btn-lg{
-      float : right;
-    }
-    .nameForm{
-=======
-.nameForm{
->>>>>>> 74a1740b300571159d9bbd01b9fe10066a14dcf4
+  h1 {
+    text-align: center
+  }
+
+  .btn btn-primary btn-lg {
+    float: right;
+  }
+
+  .nameForm {
+
       display: none;
     }
+
     /* Add a black background color to the top navigation */
-.topnav {
-  background-color: gray;
-  overflow: hidden;
-  width: 100%;
+    .topnav {
+      background-color: gray;
+      overflow: hidden;
+      width: 100%;
 
-}
+    }
 
-/* Style the links inside the navigation bar */
-.topnav a {
-  float: left;
-  color: whitesmoke;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
+    /* Style the links inside the navigation bar */
+    .topnav a {
+      float: left;
+      color: whitesmoke;
+      text-align: center;
+      padding: 14px 16px;
+      text-decoration: none;
+      font-size: 17px;
+    }
 
-/* Change the color of links on hover */
-.topnav a:hover {
-  background-color:gray;
-  color: black;
-}
+    /* Change the color of links on hover */
+    .topnav a:hover {
+      background-color: gray;
+      color: black;
+    }
 
-/* Add a color to the active/current link */
-.topnav a.active {
-  background-color:lightgray;
-  color: white;
-}
+    /* Add a color to the active/current link */
+    .topnav a.active {
+      background-color: lightgray;
+      color: white;
+    }
 
-/* @media dimension groups: min-width: 576px */
+    /* @media dimension groups: min-width: 576px */
 
-/* _______________________@media index.html _________________________ */
+    /* _______________________@media index.html _________________________ */
 
-@media(min-width: 576px) {
+    @media(min-width: 576px) {
 
-<<<<<<< HEAD
-/* _________________________________________________@media tracking_page.html _______________________________________________________________ */
-=======
-  /* <jumbotron> */
-  .gameMode {
-    margin-top: 85px;
-    margin-left: auto;
-    margin-right: auto;
-    padding-top: auto;
-    margin-bottom: auto;
-    padding-bottom: auto;
-    padding-right: auto;
-    padding-left: auto;
+      /* _________________________________________________@media tracking_page.html _______________________________________________________________ */
+      /* <jumbotron> */
+      .gameMode {
+        margin-top: 85px;
+        margin-left: auto;
+        margin-right: auto;
+        padding-top: auto;
+        margin-bottom: auto;
+        padding-bottom: auto;
+        padding-right: auto;
+        padding-left: auto;
 
-    /* Assuming the smallest screen height is 768px */
-    /* height: 250vh; */
-  }
+        /* Assuming the smallest screen height is 768px */
+        /* height: 250vh; */
+      }
 
-  /* Navigation bar */
-  .topnav {
-    background-color: gray;
-    overflow: hidden;
-    width: 100vh;
-  }
+      /* Navigation bar */
+      .topnav {
+        background-color: gray;
+        overflow: hidden;
+        width: 100vh;
+      }
 
-  /* Game Mode Title */
-  .gameModeDisplay {
-    margin-left: auto;
-    margin-right: auto;
-  }
-  /* <p> Instructions */
-  .lead {
-    margin-left: auto;
-    margin-right: auto;
-  }
-  /* <h3 Game Code> */
-  #gameCodeHeader {
-    margin-left: auto;
-    margin-right: auto;
-  }
-  /* <form code> */
-  #codeForm {
-    margin-left: auto;
-    margin-right: auto;
-  }
-  /* <submit button> */
-  .submitButton {
-    margin-left: auto;
-    margin-right: auto;
-  }
-  /* <h3 New Game> */
-  #newGameHeader {
-    margin-left: auto;
-    margin-right: auto;
-  }
-  /* <new game button> */
-  .newGame {
-    margin-left: auto;
-    margin-right: auto;
-  }
-  /* <h3 Login> */
-  #loginHeader {
-    margin-left: auto;
-    margin-right: auto;
-  }
-  /* <login button> */
-  .login {
-    margin-left: auto;
-    margin-right: auto;
-  }
-};
+      /* Game Mode Title */
+      .gameModeDisplay {
+        margin-left: auto;
+        margin-right: auto;
+      }
 
+      /* <p> Instructions */
+      .lead {
+        margin-left: auto;
+        margin-right: auto;
+      }
 
+      /* <h3 Game Code> */
+      #gameCodeHeader {
+        margin-left: auto;
+        margin-right: auto;
+      }
 
+      /* <form code> */
+      #codeForm {
+        margin-left: auto;
+        margin-right: auto;
+      }
 
+      /* <submit button> */
+      .submitButton {
+        margin-left: auto;
+        margin-right: auto;
+      }
 
+      /* <h3 New Game> */
+      #newGameHeader {
+        margin-left: auto;
+        margin-right: auto;
+      }
 
->>>>>>> 74a1740b300571159d9bbd01b9fe10066a14dcf4
+      /* <new game button> */
+      .newGame {
+        margin-left: auto;
+        margin-right: auto;
+      }
 
+      /* <h3 Login> */
+      #loginHeader {
+        margin-left: auto;
+        margin-right: auto;
+      }
+
+      /* <login button> */
+      .login {
+        margin-left: auto;
+        margin-right: auto;
+      }
+    }
+
+    ;
